[package]
name = "livedraft-arena-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Linera SDK
linera-sdk = "0.15"
linera-client = "0.15"
linera-core = "0.15"
linera-views = "0.15"

# Local contract
livedraft-arena = { path = "../contracts/livedraft-arena" }

# GraphQL
async-graphql = "7.0"
async-graphql-warp = "7.0"

# Web server
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async
futures = "0.3"

# Path handling
dirs = "5.0"

# Cryptography for player identity
sha2 = "0.10"